# D-Ride

./: README.md
Projects/dride/: .gitignore  CLAUDE.md  README.md  REPORT_PHASE_3.md  SPEC.md  stage_3_report.md  stage_4_report.md
Projects/dride/dride-backend/: .env.example  .gitignore  Cargo.toml  docker-compose.yml
Projects/dride/dride-backend/migrations/: 001_create_users.sql  002_create_rides.sql  003_create_ride_events.sql  004_create_ride_locations.sql  005_create_ratings.sql  006_create_wallets.sql
Projects/dride/dride-backend/src/: config.rs  error.rs  lib.rs  main.rs
Projects/dride/dride-backend/src/auth/: jwt.rs  middleware.rs  mod.rs  otp.rs
Projects/dride/dride-backend/src/db/: pool.rs
Projects/dride/dride-backend/src/handlers/: auth.rs  mod.rs  ratings.rs  rides.rs  users.rs
Projects/dride/dride-backend/src/jobs/: expire_rides.rs  mod.rs
Projects/dride/dride-backend/src/models/: mod.rs  rating.rs  ride.rs  ride_event.rs  ride_location.rs  user.rs  wallet.rs
Projects/dride/dride-backend/src/services/: mod.rs  pricing.rs  sol_rate.rs
Projects/dride/dride-backend/src/ws/: handler.rs  hub.rs  messages.rs  mod.rs
Projects/dride/dride-backend/tests/: helpers.rs  integration.rs
Projects/dride/dride-backend/tests/api/: auth_test.rs  mod.rs  rides_test.rs  users_test.rs
Projects/dride/dride-escrow/: Anchor.toml  package.json
Projects/dride/dride-escrow/programs/dride-escrow/: Cargo.toml
Projects/dride/dride-escrow/tests/: dride-escrow.ts
Projects/dride/dride-leptos-landing/: .env.example  .gitignore  Cargo.toml  README.md  Trunk.toml  index.html
Projects/dride/dride-leptos-landing/scripts/: run_pentest.sh  security_audit.sh
Projects/dride/dride-leptos-landing/src/: app.rs  main.rs
Projects/dride/dride-leptos-landing/src/components/: mod.rs
Projects/dride/dride-leptos-landing/src/components/layout/: mod.rs
Projects/dride/dride-leptos-landing/src/components/sections/: mod.rs
Projects/dride/dride-leptos-landing/src/components/ui/: accordion.rs  badge.rs  button.rs  card.rs  glow_card.rs  gradient_text.rs  input.rs  mod.rs  progress_bar.rs  section_wrapper.rs
Projects/dride/dride-leptos-landing/src/components/wallet/: mod.rs  wallet_adapter.rs  wallet_button.rs  wallet_modal.rs
Projects/dride/dride-leptos-landing/src/hooks/: mod.rs
Projects/dride/dride-leptos-landing/src/i18n/: mod.rs
Projects/dride/dride-leptos-landing/src/security/: content_security_policy.rs  crypto.rs  csrf_protection.rs  input_validation.rs  mod.rs  monitoring.rs  rate_limiter.rs  secure_headers.rs
Projects/dride/dride-leptos-landing/src/services/: mod.rs  presale_service.rs
Projects/dride/dride-leptos-landing/src/stores/: mod.rs
Projects/dride/dride-leptos-landing/src/types/: mod.rs
Projects/dride/dride-leptos-landing/src/utils/: mod.rs
Projects/dride/dride-leptos-landing/tests/e2e/: mod.rs  user_journeys.rs
Projects/dride/dride-leptos-landing/tests/integration/: mod.rs  presale_flow_test.rs  wallet_integration_test.rs
Projects/dride/dride-leptos-landing/tests/unit/components/: button_test.rs  mod.rs
Projects/dride/dride-leptos-landing/tests/unit/security/: input_validation_test.rs  mod.rs  rate_limiter_test.rs
Projects/dride/dride-presale/: Anchor.toml  README.md
Projects/dride/dride-presale/programs/dride-presale/: Cargo.toml
Projects/dride/dride-presale/programs/dride-presale/src/: lib.rs
Projects/dride/dride-presale/tests/: dride_presale.rs
Projects/dride/dride-token/: Anchor.toml  README.md
Projects/dride/dride-token/programs/dride-token/: Cargo.toml
Projects/dride/dride-token/programs/dride-token/src/: lib.rs
Projects/dride/dride-token/tests/: dride_token.rs
Projects/dride/landing/: CLAUDE.md  LANDING_SPEC.md  README.md  middleware.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
Projects/dride/landing/messages/: en.json  pt.json
Projects/dride/landing/src/: middleware.ts
Projects/dride/landing/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
Projects/dride/landing/src/hooks/: usePresale.ts
(+37 files in other folders)
