[package]
name = "dride-leptos-landing"
version = "0.1.0"
edition = "2021"
authors = ["dRide Protocol <team@dride.app>"]
description = "dRide Landing Page - Rust + Leptos with enterprise-grade security"

[dependencies]
# Web Framework
leptos = { version = "0.7", features = ["csr", "tracing", "nightly"] }
leptos_router = { version = "0.7", features = ["csr"] }
leptos_meta = { version = "0.7" }

# Async Runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Solana Integration
solana-sdk = "1.18"
solana-client = "1.18"
solana-program = "1.18"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
anchor-client = "0.29"
bs58 = "0.5"

# Cryptography
ed25519-dalek = { version = "2.0", features = ["serde"] }
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"

# Security
validator = { version = "0.18", features = ["derive"] }
regex = "1.10"
urlencoding = "2.1"
x509-parser = "0.16"

# HTTP Client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Rate Limiting
governor = { version = "0.6", features = ["std"] }
dashmap = "5.5"

# Time & Date
chrono = { version = "0.4", features = ["serde"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"
color-eyre = "0.6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-web = "0.1"

# Internationalization
fluent = "0.16"
fluent-bundle = "0.15"
unic-langid = "0.9"

# Animation Library
gloo-net = "0.5"
web-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

# Utilities
once_cell = "1.19"
lazy_static = "1.4"
derive_more = "0.99"
paste = "1.0"

[dev-dependencies]
# Testing
criterion = "0.5"
wasm-bindgen-test = "0.3"

# Mocking
mockall = "0.12"

[features]
default = ["csr"]
csr = ["leptos/csr"]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
strip = true
