[package]
name = "dride-presale"
version = "0.1.0"
description = "DRIDE Presale - Token presale with security features"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dride_presale"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"

[dev-dependencies]
solana-program-test = "1.16.0"
solana-sdk = "1.16.0"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
